project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: dwk-project-dep
spec:
    replicas: 1
    selector:
        matchLabels:
            app: dwk-project
    template:
        metadata:
            labels:
                app: dwk-project
        spec:
            containers:
                - name: dwk-project
                  image: volepp/dwk-project:v0.3
