project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: dwk-project-svc
spec:
    type: ClusterIP 
    selector:
        app: dwk-project
    ports:
        - port: 2345
          protocol: TCP
          targetPort: 3000
