project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: dwk-project-ingress
    annotations:
        traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
    rules:
      - http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: dwk-project-svc
                        port:
                            number: 2345
              - path: /pingpong
                pathType: Prefix
                backend:
                    service:
                        name: dwk-pingpong-svc
                        port:
                            number: 2345
